src/test/ui/parser/pat-tuple-2.rs
fn main() {
    match (0, 1, 2) {
        (pat, ..,) => {}
        //~^ ERROR trailing comma is not permitted after `..`
    }
}
